Start writing page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>Hibiscus Software</title>
+  <link rel="stylesheet" href="./assets/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <h1>Hibiscus Software</h1>
+  <header>
+    <img src="/assets/logo.svg" alt="Hibiscus Software Logo" width="42" height="42">
+    <h2>Hibiscus Software</h2>
+  </header>
+  <main>
+    <section>
+      <p>We're Hibiscus Software, a small software development studio.</p>
+    </section>
+    <section>
+      <h3>Projects</h3>
+      <p>Here are some of the projects we are currently working on.</p>
+    </section>
+    <section>
+      <h3>Contact</h3>
+    </section>
+  </main>
+  <footer>
+    <hr>
+    <p>Copyright &copy; 2024, Hibiscus Software. Some rights reserved.</p>
+  </footer>
 </body>
 </html>
