Add projects & contact

--- a/index.html
+++ b/index.html
@@ -18,9 +18,23 @@
     <section>
       <h3>Projects</h3>
       <p>Here are some of the projects we are currently working on.</p>
+      <ul>
+        <li>
+          <a href="https://github.com/hibiscus-software/singularity">Singularity</a>
+          - A swerve drive library for <i>FIRST</i> Robotics Competition made easy.
+        </li>
+        <li>
+          <a href="https://github.com/hibiscus-software/acade-frc-library">AutoCAD Electrical FRC Library</a>
+          - A component library for AutoCAD Electrical to make designing robot wiring diagrams easier.
+        </li>
+      </ul>
     </section>
     <section>
       <h3>Contact</h3>
+      <p>
+        You can email us at <a href="mailto:info@hibiscus.software">info@hibiscus.software</a>.
+        You can also check out our <a href="https://github.com/hibiscus-software">GitHub</a>.
+      </p>
     </section>
   </main>
   <footer>
