--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
   </header>
   <main>
     <section>
-      <p>We're Hibiscus Software, a small software development studio.</p>
+      <p>
+        We're Hibiscus Software, a small software and hardware development company focusing on Industrial
+        Automation, Controls, and Data Acquisition.
+      </p>
     </section>
     <section>
       <h3>Projects</h3>
